--- a/index.html
+++ b/index.html
@@ -18,20 +18,20 @@
         <div class="row">
             <div class="col-3">
                 <div class="list-group">
-                    <a class="list-group-item list-group-item-secondary"> <i class="bi bi-list"></i> Spis Treści</a>
-                    <a href="/" class="list-group-item list-group-item-action"> <i class="bi bi-house"></i> Strona Główna</a>
-                    <a href="/k1.html" class="list-group-item list-group-item-action">Księga 1</a>
-                    <a href="/k2.html" class="list-group-item list-group-item-action">Księga 2</a>
-                    <a href="/k3.html" class="list-group-item list-group-item-action">Księga 3</a>
-                    <a href="/k4.html" class="list-group-item list-group-item-action disabled">Księga 4</a>
-                    <a href="/k5.html" class="list-group-item list-group-item-action">Księga 5</a>
-                    <a href="/k6.html" class="list-group-item list-group-item-action">Księga 6</a>
-                    <a href="/k7.html" class="list-group-item list-group-item-action">Księga 7</a>
-                    <a href="/k8.html" class="list-group-item list-group-item-action disabled">Księga 8</a>
-                    <a href="/k9.html" class="list-group-item list-group-item-action">Księga 9</a>
-                    <a href="/k10.html" class="list-group-item list-group-item-action disabled">Księga 10</a>
-                    <a href="/k11.html" class="list-group-item list-group-item-action">Księga 11</a>
-                    <a href="/k12.html" class="list-group-item list-group-item-action">Księga 12</a>
+                    <a class="list-group-item list-group-item-primary"><i class="bi bi-list-columns"></i> Spis treści</a>
+                    <a href="./" class="list-group-item list-group-item-action"><i class="bi bi-house-fill"></i> Strona główna</a>
+                    <a href="./k1.html" class="list-group-item list-group-item-action"><i class="bi bi-bookmark-fill"></i> Księga 1</a>
+                    <a href="./k2.html" class="list-group-item list-group-item-action"><i class="bi bi-bookmark-fill"></i> Księga 2</a>
+                    <a href="./k3.html" class="list-group-item list-group-item-action"><i class="bi bi-bookmark-fill"></i> Księga 3</a>
+                    <a href="./k4.html" class="list-group-item list-group-item-action"><i class="bi bi-bookmark-fill"></i> Księga 4</a>
+                    <a href="./k5.html" class="list-group-item list-group-item-action"><i class="bi bi-bookmark-fill"></i>  Księga 5</a>
+                    <a href="./k6.html" class="list-group-item list-group-item-action"><i class="bi bi-bookmark-fill"></i> Księga 6</a>
+                    <a href="./k7.html" class="list-group-item list-group-item-action"><i class="bi bi-bookmark-fill"></i> Księga 7</a>
+                    <a href="./k8.html" class="list-group-item list-group-item-action"><i class="bi bi-bookmark-fill"></i> Księga 8</a>
+                    <a href="./k9.html" class="list-group-item list-group-item-action"><i class="bi bi-bookmark-fill"></i> Księga 9</a>
+                    <a href="./k10.html" class="list-group-item list-group-item-action"><i class="bi bi-bookmark-fill"></i> Księga 10</a>
+                    <a href="./k11.html" class="list-group-item list-group-item-action"><i class="bi bi-bookmark-fill"></i> Księga 11</a>
+                    <a href="./k12.html" class="list-group-item list-group-item-action"><i class="bi bi-bookmark-fill"></i> Księga 12</a>
                   </div>
             </div>
             <div class="col-9">
